[package]
name = "sxtetris"
version = "1.2.0"
edition = "2021"
authors = ["shixinhuang99 <shixinhuang99@gmail.com>"]
description = "A terminal Tetris game"
repository = "https://github.com/shixinhuang99/sxtetris"
license = "MIT"
categories = ["games"]
keywords = ["tetris", "tui"]
include = ["Cargo.toml", "Cargo.lock", "README.md", "LICENSE", "src/**"]

[dependencies]
anyhow = "1.0.81"
crossterm = { version = "=0.27.0", features = ["event-stream"] }
directories = "5.0.1"
fastrand = "2.0.2"
futures-util = "=0.3.30"
log = { version = "0.4.21", optional = true }
ratatui = "=0.26.1"
rodio = { version = "0.19.0", default-features = false, features = [
  "wav",
  "mp3",
] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
simplelog = { version = "0.12.2", optional = true }
tokio = { version = "=1.37.0", features = [
  "rt",
  "rt-multi-thread",
  "time",
  "macros",
  "sync",
] }
tui-big-text = "0.4.2"

[profile.release]
strip = true
lto = true
panic = "abort"
codegen-units = 1

[features]
_dev = ["dep:log", "dep:simplelog"]
